--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="carousel-container">
             <div class="carousel-slides" id="carouselSlides">
                 <div class="carousel-slide active">
-                    <img src="WhatsApp Image 2026-01-21 at 5.22.28 PM.jpeg" alt="RK Movies">
+                    <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/movie-ticket-design-template-05ed6857e49d742093f4f421781c54c5_screen.jpg?ts=1713452859" alt="RK Movies">
                     <div class="carousel-overlay"></div>
                 </div>
         <!-- Search Bar Overlay -->
@@ -282,3 +282,4 @@
 </body>
 
 </html>
+
