Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="carousel-container">
             <div class="carousel-slides" id="carouselSlides">
                 <div class="carousel-slide active">
-                    <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/movie-ticket-design-template-05ed6857e49d742093f4f421781c54c5_screen.jpg?ts=1713452859" alt="RK Movies">
+                    <img src="https://marketplace.canva.com/EAE4fXQgz8M/1/0/1600w/canva-green-modern-get-discount-movie-ticket-YN2y2phEn8k.jpg" alt="RK Movies">
                     <div class="carousel-overlay"></div>
                 </div>
         <!-- Search Bar Overlay -->
@@ -282,4 +282,5 @@
 </body>
 
 </html>
+
 
