Fix HTML formatting and update carousel image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="carousel-container">
             <div class="carousel-slides" id="carouselSlides">
                 <div class="carousel-slide active">
-                    <img src="https://marketplace.canva.com/EAE4fXQgz8M/1/0/1600w/canva-green-modern-get-discount-movie-ticket-YN2y2phEn8k.jpg" alt="RK Movies">
+                    <img src="dhurandar.jpg" alt="RK Movies">
                     <div class="carousel-overlay"></div>
                 </div>
         <!-- Search Bar Overlay -->
@@ -282,5 +282,6 @@
 </body>
 
 </html>
+
 
 
