Fix HTML structure and remove duplicates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#signin" class="nav-link">Sign In</a>
                 </nav>
                 <div class="header-actions">
-                      <button class="icon-btn" id="searchToggle" aria-label="Search">
+                    <button class="icon-btn" id="searchToggle" aria-label="Search">
                         <i class="fas fa-search"></i>
                     </button>
                     <div class="header-search-container" id="headerSearch">
@@ -60,16 +60,14 @@
         </div>
     </header>
 
-    <!-- Hero Section with Carousel -->
-    <section class="hero-section">
-        <div class="carousel-container">
-            <div class="carousel-slides" id="carouselSlides">
-                <div class="carousel-slide active">
-                    <img src="https://i.pinimg.com/736x/6e/8b/e0/6e8be0f9a5e0197acd8aa7bdb9721f27.jpg" alt="RK Movies">
-                    
-                </div>
-        <!-- Search Bar Overlay -->
-        
+    <!-- Hero Section with Banner -->
+    <section class="hero">
+        <div class="hero-content">
+            <img src="icon assembly.png" class="popcorn" alt="" />
+
+        </div>
+
+
     </section>
 
     <!-- Location & Filters -->
@@ -282,8 +280,3 @@
 </body>
 
 </html>
-
-
-
-
-
