--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Hero Section with Banner -->
     <section class="hero">
         <div class="hero-content">
-            <img src="https://lh3.googleusercontent.com/gg/AIJ2gl__CjBpvhLBQ0HPRAY9tuzESvL9zVxSqVueDRCrDZyi10VDDQlxhWUiEZsPtkA_w2up2N0rHSpM85iiKzUu7gGndf1A8Ceg-4xOoHycg43_EHuuMmrn2DmhIBcjUBoRAHOAx0Ode4fx4DSdEzwfxReunTDN7jCkWyE4ojz7ceqIOl2NDdwB43GxO0UU8Hetw13Rd32C1dIXtXEjEYShpweLqmWOwnl4M8A547qqFJ7uyDWsLjTNTzYxjpfs0jyT-F6PYqaSjO9JkGrVv7QBayMhi8HjSIiEo_2b3_heoFRN_-Q-mnd6SJ3h4WCBr0OiU5kJcf4P-PyWedgXZPgJgV0=s1024-rj" class="popcorn" alt="" />
+            <img src="https://github.com/user-attachments/assets/a5154858-b3fe-41c4-bd4a-28ba289c8b46" class="popcorn" alt="RK Movies" />
 
         </div>
 
@@ -280,4 +280,5 @@
 </body>
 
 </html>
+
 
