--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Hero Section with Banner -->
     <section class="hero">
         <div class="hero-content">
-            <img src="https://github.com/user-attachments/assets/c5723257-1650-48a7-9ef8-53c570078abf" class="popcorn" alt="RK Movies" />
+            <img src="(https://github.com/user-attachments/assets/3aa9c664-ba10-451c-a20b-35fb6460d7d1" class="popcorn" alt="RK Movies" />
 
         </div>
 
@@ -280,6 +280,7 @@
 </body>
 
 </html>
+
 
 
 
