--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Hero Section with Banner -->
     <section class="hero">
         <div class="hero-content">
-            <img src="icon assembly.png" class="popcorn" alt="" />
+            <img src="https://github.com/user-attachments/assets/fdf407c8-acca-4612-930f-e1bf78c3fc55" class="popcorn" alt="" />
 
         </div>
 
@@ -309,3 +309,4 @@
 </body>
 
 </html>
+
